test/sliceFixedInt1.slq

def main(){
	a:=0:!int[2];
	x:=[];
	return x[a..a]; /// error
}
